# library-of-babel-open

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gru
assets/: bongo.mtl  room2.mtl
assets/room/: finished1.mtl  finished6.mtl
include/: camera.hpp  chunk.hpp  game_object.hpp  input.hpp  mesh.hpp  renderer.hpp  world_gen.hpp
src/: camera.cpp  input.cpp  main.cpp
src/render/: mesh.cpp  renderer.cpp
src/shaders/: frag.glsl  vert.glsl
src/world/: game_object.cpp  world_gen.cpp
